--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         ref: master
         fetch-depth: 0
 
+    - run: $env:Path += ";./.local/bin
+
     - uses: mhanberg/gigalixir-action@v0.4.3
       with:
         GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
