--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
       with:
         GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
         GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
-        GIGALIXIR_APP: elixir_rss
+        GIGALIXIR_APP: elixir-rss
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         MIGRATIONS: false
