--- a/assets/package.json
+++ b/assets/package.json
@@ -10,8 +10,8 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "topbar": "^0.1.4",
-    "qrcode": "^1.4.4"
+    "qrcode": "^1.4.4",
+    "topbar": "^0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
